--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body class="flex flex-col items-center justify-center min-h-screen p-4 sm:p-6 bg-gray-100">
     <div class="bg-white p-6 sm:p-8 rounded-xl shadow-lg w-full max-w-2xl border border-gray-200 text-center">
-        <h1 class="text-2xl sm:text-3xl font-extrabold text-gray-800 mb-8">Valuation Calculators</h1>
+        <h1 class="text-2xl sm:text-3xl font-extrabold text-gray-800 mb-8">Resources</h1>
 
         <div class="flex flex-col space-y-4">
             <!-- Button for Granular 2-Stage DCF -->
